# boogie-v1

./: addon.py  api.py  apis.py  constants.py  cosmetics.py  dll.py  main.py  pyproject.toml  setup.py  translations.json  type_definitions.py
modifications/: __init__.py  cloudstorage.py  images.py  lightswitch.py
modifications/Exploits/: blurl_exploit.py  lfg_exploit.py  name_exploit.py  playlist_exploit.py
modifications/LockerV4/: ActiveLoadoutGroup.py  QueryItems.py
typings/cx_Freeze/: __init__.pyi  __main__.pyi  _compat.pyi  _importlib.pyi  _pyproject.pyi  _typing.pyi  cli.pyi  common.pyi  darwintools.pyi  exception.pyi  executable.pyi  finder.pyi  freezer.pyi  module.pyi  parser.pyi  setupwriter.pyi  util.pyi  winmsvcr.pyi  winversioninfo.pyi
typings/legendary/: __init__.pyi
typings/mitmproxy/: addonmanager.pyi  certs.pyi  command.pyi  connection.pyi  ctx.pyi  dns.pyi  eventsequence.pyi  exceptions.pyi  flow.pyi  flowfilter.pyi  hooks.pyi  http.pyi  log.pyi  master.pyi  options.pyi  optmanager.pyi  tcp.pyi  tls.pyi  types.pyi  udp.pyi  version.pyi  websocket.pyi
typings/pypresence/: __init__.pyi  baseclient.pyi  client.pyi  exceptions.pyi  payloads.pyi  presence.pyi  utils.pyi
typings/win32file/: __init__.pyi
typings/win32pipe/: __init__.pyi
typings/yt_dlp/: YoutubeDL.pyi  __init__.pyi  aes.pyi  cookies.pyi  jsinterp.pyi  minicurses.pyi  plugins.pyi  socks.pyi  update.pyi  webvtt.pyi
utils/: blurl.py  checks.py  config.py  console_logs.py  discord.py  epicgames.py  jinja.py  misc.py  mitmproxyserver.py  translation.py
(+314 files in other folders)
